--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Aviva Zero</title>
-    <meta property="og:title" content="Aviva Zero" key="title" />
+    <title>Damage Capture</title>
+    <meta property="og:title" content="Damage Capture" key="title" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <meta name="viewport" content="initial-scale=1.0, width=device-width" />
-    <meta name="twitter:title" content="Aviva Zero" />
-    <meta name="twitter:description" content="Aviva Zero - The best" />
+    <meta name="twitter:title" content="Damage Capture" />
+    <meta name="twitter:description" content="Damage Capture" />
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
